fix: font-size overflow fix

--- a/index.css
+++ b/index.css
@@ -19,6 +19,19 @@
 .titleBar-AC4pGV {
     background-color: rgba(32, 32, 32, .7) !important;
 }
+.wordmarkWindows-1v0lYD {
+    display: flex;
+    align-items: center;
+}
+.wordmarkWindows-1v0lYD::after {
+    content: "Fibonecce Theme";
+    color: var(--text-muted);
+    font-size: .5rem;
+    letter-spacing: .2px;
+    padding-left: 3.5px;
+    padding-top: 1.5px;
+    font-weight: 700;
+}
 .withFrame-haYltI {
     margin-top: 0 !important;
     padding-top: 4px;
@@ -258,7 +271,6 @@
     height: 30% !important;
 } 
 
-
 /* Config Tab */
 
 .sidebarRegion-VFTUkN, .sidebarRegionScroller-3MXcoP {
@@ -277,6 +289,6 @@
 .contentRegion-3nDuYy {
     flex: 1 1 900px;
 }
-.item-PXvHYJ {
+.side-8zPYf6 > .item-PXvHYJ {
     font-size: 20px;
 }
